Menu item scroll to section on mobile. Fixed #172

--- a/assets/sass/site/header/_header_mobile_sidebar.scss
+++ b/assets/sass/site/header/_header_mobile_sidebar.scss
@@ -328,8 +328,8 @@ body {
 
 /* Hiding Menu Sidebar animation. */
 .hiding-header-menu-sidebar {
-    overflow: hidden;
-    position: fixed;
+    overflow-x: hidden;
+    position: relative;
     width: 100%;
     display: block;
     &.menu_sidebar_slide_overlay {
